# rust_web_hello_world

./: .dockerignore  Cargo.toml  Dockerfile  README.md  configuration.yaml  launch.json  spec.yaml
.circleci/: config.yml
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20220923130123_create_subscription_table.sql
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  mod.rs  subscriptions.rs
tests/: health_check.rs
