[package]
name = "rust_web_hello_world"
version = "0.1.0"
authors = ["Max G. Faraday <maxgfaraday@6thcolumn.org>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "rust_web_hello_world"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
regex = "1.6.0"
reqwest = "0.11"
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}

[dev-dependencies]
proptest = "1.0.0"
