[package]
name = "rust_web_hello_world"
version = "0.1.0"
authors = ["Max G. Faraday <maxgfaraday@6thcolumn.org>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "rust_web_hello_world"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
chrono  = "0.4.22"
config  = "0.13"
#env_logger = "0.9"
#log = "0.4"
regex   = "1.6.0"
reqwest = "0.11"
serde = {version = "1", features = ["derive"]}
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
tracing = {version = "0.1", features = ["log"]}
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-subscriber = {version = "0.3", features = ["registry","env-filter"]}
uuid  = {version = "1", features = ["v4"]}

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "chrono",
    "macros",
    "migrate",
    "postgres",
    "runtime-actix-rustls",
    "uuid"
]

[dev-dependencies]
proptest = "1.0.0"
