[package]
name = "rust_web_hello_world"
version = "0.1.0"
authors = ["Max G. Faraday <maxgfaraday@6thcolumn.org>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "z2p"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
chrono  = "0.4.22"
config  = "0.13"
#env_logger = "0.9"
#log = "0.4"
regex   = "1.6.0"
secrecy = {version = "0.8", features = ["serde"]}
serde = {version = "1", features = ["derive"]}
serde-aux = "3"
sqlx = { version = "0.6", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
tracing = {version = "0.1", features = ["log"]}
tracing-actix-web = "0.6"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-subscriber = {version = "0.3", features = ["registry","env-filter"]}
unicode-segmentation = "1.7.1"
uuid  = {version = "1", features = ["v4"]}
validator = "0.15.0"

[dev-dependencies]
claim = "0.5.0"
fake = "~2.3.0"
once_cell = "1"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
reqwest = { version = "0.11", features = ["json"]}
